--- a/prompt.html
+++ b/prompt.html
@@ -6,8 +6,7 @@
 <body>
     <h1>Hangman</h1>
     <script>
-        var name = prompt("What's your name?");
-        console.log("Hello, " + name);
+        alert("Awsome!");
     </script>
 </body>
 </html>
